fix(client): modal overflow on mobile (#713)

--- a/client/src/sass/components/_modals.scss
+++ b/client/src/sass/components/_modals.scss
@@ -170,6 +170,7 @@ $modal--tabs--padding--vertical--left: $modal--padding--horizontal;
         width: 100%;
         top: unset;
         bottom: 0%;
+        min-width: unset;
       }
     }
 
